[tool.poetry]
name = "advent2021"
version = "0.1.0"
description = "Advent of code 2021"
authors = ["Lef Filippakis <Lef-F@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
jupyterlab = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
